--- a/css/brainstromingStyles.css
+++ b/css/brainstromingStyles.css
@@ -11,7 +11,7 @@ p{
 }
 
 .description-text {
-    margin-bottom: 20%;
+    margin-bottom: 15%;
 }
 #InitialIdeas{
     font-size: 5rem;
@@ -41,12 +41,13 @@ div.nb-subtitle{
 .nb-img{
     margin-top: 1rem;
     max-height: 100%;
-    height: 100%;
+    height: 50%;
 
 }
 .nb-description{
     margin-top: 1rem;
     padding-left: 3rem;
+}
+.nb-description p{
     vertical-align: middle;
-
 }
